--- a/index.html
+++ b/index.html
@@ -4,18 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Help families in need by buying candles!">
+    <meta name="author" content="mlbileschi">
     <!-- <link rel="icon" href="node_modules/bootstrap/favicon.ico"> -->
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>Candles for goats!</title>
 
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="jumbotron.css" rel="stylesheet"> -->
   </head>
 
   <body>
@@ -29,28 +25,20 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">Candles for goats</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          <a href="http://goo.gl/forms/K5RolWzVr5" class="btn btn-success navbar-right">Donate now!</a>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Hello, world!</h1>
-        <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
+    <div class="jumbotron" style="background-image:url(img/candle.jpg);background-size:cover">
+      <div class="container" style="color:white">
+        <h1>Lend a helping hand</h1>
+        <p style="color:lightgray">Do something nice while smelling nice. Buy a homemade candle to fund a family in need get a goat</p>
+        <p><a class="btn btn-primary btn-lg" href="http://goo.gl/forms/K5RolWzVr5" role="button">Order now! &raquo;</a></p>
       </div>
     </div>
 
@@ -58,27 +46,22 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Buying candles for goats</h2>
+          <p> We here at CandlesForGoats make homemade candles, sell them, and donate every bit of the profit toward sustainable elimination of poverty. </p>
+          <p><a class="btn btn-default" href="http://goo.gl/forms/K5RolWzVr5" role="button">Order now! &raquo;</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <h2>Donating animals</h2>
+          <p> Donating an animal is a great way to help a family <i>sustain</i> themselves. The gifted family can use the animal for milk, cheese, and labor. </p>
+          <p><a class="btn btn-default" href="http://donate.worldvision.org/goat" role="button">Learn more! &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>About World Vision</h2>
+          <p> Donations are made through World Vision, a leader in helping children and families out of poverty. They address everything health to disaster response and focus on eliminating root causes of struggle. </p>
+          <p><a class="btn btn-default" href="http://www.worldvision.org/" role="button">Learn more! &raquo;</a></p>
        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
       </div>
-
       <hr>
-
-      <footer>
-        <p>&copy; Company 2014</p>
-      </footer>
     </div> <!-- /container -->
 
 
@@ -92,8 +75,3 @@
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
-
-    Status API Training Shop Blog About Pricing
-
-    © 2016 GitHub, Inc. Terms Privacy Security Contact Help
-
