Add some more images

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
   </head>
 
   <body>
@@ -34,10 +35,11 @@
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron" style="background-image:url(img/candle.jpg);background-size:cover">
+    <div class="jumbotron">
       <div class="container" style="color:white">
-        <h1>Lend a helping hand</h1>
-        <p style="color:lightgray">Do something nice while smelling nice. Buy a homemade candle to fund a family in need get a goat</p>
+        <img src="img/candle.jpg">
+        <h1 style="color:white">Lend a helping hand</h1>
+        <p style="color:white">Do something nice while smelling something nice. </p>
         <p><a class="btn btn-primary btn-lg" href="http://goo.gl/forms/K5RolWzVr5" role="button">Order now! &raquo;</a></p>
       </div>
     </div>
@@ -52,11 +54,13 @@
         </div>
         <div class="col-md-4">
           <h2>Donating animals</h2>
+          <img src="img/kid_with_goat.jpg">
           <p> Donating an animal is a great way to help a family <i>sustain</i> themselves. The gifted family can use the animal for milk, cheese, and labor. </p>
           <p><a class="btn btn-default" href="http://donate.worldvision.org/goat" role="button">Learn more! &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>About World Vision</h2>
+          <img src="img/world_vision.png">
           <p> Donations are made through World Vision, a leader in helping children and families out of poverty. They address everything health to disaster response and focus on eliminating root causes of struggle. </p>
           <p><a class="btn btn-default" href="http://www.worldvision.org/" role="button">Learn more! &raquo;</a></p>
        </div>
