--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Buying candles for goats</h2>
-          <p> We here at CandlesForGoats make homemade candles, sell them, and donate every bit of the profit toward sustainable elimination of poverty. </p>
+          <p> We here at CandlesForGoats make homemade candles, sell them, and donate every bit of the profit toward sustainable elimination of poverty. 25 candles will purchase a goat! </p>
           <p><a class="btn btn-default" href="http://goo.gl/forms/K5RolWzVr5" role="button">Order now! &raquo;</a></p>
         </div>
         <div class="col-md-4">
