--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
         </div>
         <div class="col-md-4">
           <h2>Donating animals</h2>
-          <img src="img/kid_with_goat.jpg">
+          <img src="img/woman_with_goat.png" class="bottom-image">
           <p> Donating an animal is a great way to help a family <i>sustain</i> themselves. The gifted family can use the animal for milk, cheese, and labor. </p>
           <p><a class="btn btn-default" href="http://donate.worldvision.org/goat" role="button">Learn more! &raquo;</a></p>
         </div>
         <div class="col-md-4">
           <h2>About World Vision</h2>
-          <img src="img/world_vision.png">
           <p> Donations are made through World Vision, a leader in helping children and families out of poverty. They address everything health to disaster response and focus on eliminating root causes of struggle. </p>
           <p><a class="btn btn-default" href="http://www.worldvision.org/" role="button">Learn more! &raquo;</a></p>
        </div>
