Use pictures of our candles

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container" style="color:white">
-        <img src="img/candle.jpg">
-        <h1 style="color:white">Lend a helping hand</h1>
-        <p style="color:white">Do something nice while smelling something nice. </p>
+        <img src="img/three_candles.jpg">
+        <h1 style="color: #585650">Lend a helping hand</h1>
+        <p style="color: #7D7D7D">Do something nice while smelling something nice. </p>
         <p><a class="btn btn-primary btn-lg" href="http://goo.gl/forms/K5RolWzVr5" role="button">Order now! &raquo;</a></p>
       </div>
     </div>
